==> hazy1k/STM32-Study-Notes/2.参考工程文件/14.SPI-读写串行FLASH（W25Q64）/1.W25Q64/User/flash/bsp_spi_flash.c <==
#include "./flash/bsp_spi_flash.h"

void SPI_FLASH_Init(void)
{
  // 1.首先定义SPI和GPIO相关的结构体变量
  SPI_InitTypeDef  SPI_InitStructure;
  GPIO_InitTypeDef GPIO_InitStructure;
	
	// 2.使能SPI时钟
	FLASH_SPI_APBxClock_FUN(FLASH_SPI_CLK, ENABLE);
	
	// 3.使能SPI引脚相关的时钟
 	FLASH_SPI_CS_APBxClock_FUN(FLASH_SPI_CS_CLK|FLASH_SPI_SCK_CLK|FLASH_SPI_MISO_PIN|FLASH_SPI_MOSI_PIN, ENABLE);
	
  // 4.配置SPI的 CS引脚，普通IO即可
  GPIO_InitStructure.GPIO_Pin = FLASH_SPI_CS_PIN; // 引脚PC0
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz; // 速度50MHz
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP; // 推挽输出
  GPIO_Init(FLASH_SPI_CS_PORT, &GPIO_InitStructure); // 初始化结构体
	
  // 5.配置SPI的 SCK引脚
  GPIO_InitStructure.GPIO_Pin = FLASH_SPI_SCK_PIN; // 引脚PA5
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP; // 复用推挽输出
  GPIO_Init(FLASH_SPI_SCK_PORT, &GPIO_InitStructure); // 初始化结构体

  // 6.配置SPI的 MISO引脚
  GPIO_InitStructure.GPIO_Pin = FLASH_SPI_MISO_PIN; // 引脚PA6
  GPIO_Init(FLASH_SPI_MISO_PORT, &GPIO_InitStructure); // 初始化结构体

  // 7.配置SPI的 MOSI引脚
  GPIO_InitStructure.GPIO_Pin = FLASH_SPI_MOSI_PIN; // 引脚PA7
  GPIO_Init(FLASH_SPI_MOSI_PORT, &GPIO_InitStructure); // 初始化结构体

  /* 停止信号 FLASH: CS引脚高电平*/
  SPI_FLASH_CS_HIGH();

// SPI 模式配置
// FLASH芯片 支持SPI模式0及模式3，据此设置CPOL CPHA
SPI_InitStructure.SPI_Direction = SPI_Direction_2Lines_FullDuplex; // 双线全双工
SPI_InitStructure.SPI_Mode = SPI_Mode_Master;                      // 主机模式
SPI_InitStructure.SPI_DataSize = SPI_DataSize_8b;                  // 8位数据模式
SPI_InitStructure.SPI_CPOL = SPI_CPOL_High;                        // 时钟极性高
SPI_InitStructure.SPI_CPHA = SPI_CPHA_2Edge;                       // 数据采样在第二个时钟边沿
SPI_InitStructure.SPI_NSS = SPI_NSS_Soft;                          // 软件NSS管理
SPI_InitStructure.SPI_BaudRatePrescaler = SPI_BaudRatePrescaler_4; // 时钟预分频器
SPI_InitStructure.SPI_FirstBit = SPI_FirstBit_MSB;                 // MSB位先传
SPI_InitStructure.SPI_CRCPolynomial = 7;                           // CRC校验位
SPI_Init(FLASH_SPIx , &SPI_InitStructure); // 初始化SPI
SPI_Cmd(FLASH_SPIx , ENABLE); // 使能SPI
}

void SPI_FLASH_SectorErase(u32 SectorAddr) // 函数参数:扇区地址
{
  // 1.发送FLASH写使能命令
  SPI_FLASH_WriteEnable();
  SPI_FLASH_WaitForWriteEnd(); // 等待写使能结束
  
  // 2.选择FLASH: CS低电平
  SPI_FLASH_CS_LOW();
  // 3.发送扇区擦除指令
  SPI_FLASH_SendByte(W25X_SectorErase);
  // 4.发送擦除扇区地址的高位
  SPI_FLASH_SendByte((SectorAddr & 0xFF0000) >> 16);
  // 5.发送擦除扇区地址的中位
  SPI_FLASH_SendByte((SectorAddr & 0xFF00) >> 8);
  // 6.发送擦除扇区地址的低位
  SPI_FLASH_SendByte(SectorAddr & 0xFF);
  // 7.停止信号 FLASH: CS 高电平
  SPI_FLASH_CS_HIGH();
  // 8.等待擦除完毕
  SPI_FLASH_WaitForWriteEnd();
}

void SPI_FLASH_BulkErase(void)
{
  // 1.发送FLASH写使能命令
  SPI_FLASH_WriteEnable();
  // 2.选择FLASH: CS低电平
  SPI_FLASH_CS_LOW();
  // 3.发送整块擦除指令
  SPI_FLASH_SendByte(W25X_ChipErase);
  // 4.停止信号 FLASH: CS 高电平
  SPI_FLASH_CS_HIGH();
  // 5.等待擦除完毕
  SPI_FLASH_WaitForWriteEnd();
}

void SPI_FLASH_PageWrite(u8* pBuffer, u32 WriteAddr, u16 NumByteToWrite) // 函数参数：要写入数据的指针，写入地址，写入数据长度
{
  // 1.发送FLASH写使能命令
  SPI_FLASH_WriteEnable();

  // 2.选择FLASH: CS低电平
  SPI_FLASH_CS_LOW();
  // 3.写页写指令
  SPI_FLASH_SendByte(W25X_PageProgram);
  // 4.发送写地址的高位
  SPI_FLASH_SendByte((WriteAddr & 0xFF0000) >> 16);
  // 5.发送写地址的中位
  SPI_FLASH_SendByte((WriteAddr & 0xFF00) >> 8);
  // 6.发送写地址的低位
  SPI_FLASH_SendByte(WriteAddr & 0xFF);
  // 7.判断要写入的数据长度是否大于单页最大长度
  if(NumByteToWrite > SPI_FLASH_PerWritePageSize) // 若要写入的数据长度大于单页最大长度
  {
     NumByteToWrite = SPI_FLASH_PerWritePageSize; // 则只写入单页最大长度
     FLASH_ERROR("SPI_FLASH_PageWrite too large!"); // 打印错误信息
  }
  // 8.写入数据
  while (NumByteToWrite--)
  {
    // 发送当前要写入的字节数据
    SPI_FLASH_SendByte(*pBuffer);
    // 指向下一字节数据
    pBuffer++;
  }
  // 9.停止信号 FLASH: CS 高电平
  SPI_FLASH_CS_HIGH();
  // 10.等待写结束
  SPI_FLASH_WaitForWriteEnd();
}

void SPI_FLASH_BufferRead(u8* pBuffer, u32 ReadAddr, u16 NumByteToRead) // 函数参数：存储读出数据的指针，读取地址，读取数据长度
{
  // 1.选择FLASH: CS低电平
  SPI_FLASH_CS_LOW();

  // 2.发送读指令
  SPI_FLASH_SendByte(W25X_ReadData);

  // 3.发送读地址高位
  SPI_FLASH_SendByte((ReadAddr & 0xFF0000) >> 16);
  // 4.发送读地址中位
  SPI_FLASH_SendByte((ReadAddr& 0xFF00) >> 8);
  // 5.发送读地址低位
  SPI_FLASH_SendByte(ReadAddr & 0xFF);
	
	// 6.读取数据
  while (NumByteToRead--)
  {
    // 读取一个字节
    *pBuffer = SPI_FLASH_SendByte(Dummy_Byte);
    // 指向下一个字节缓冲区
    pBuffer++;
  }
  // 停止信号 FLASH: CS 高电平
  SPI_FLASH_CS_HIGH();
}

u32 SPI_FLASH_ReadID(void)
{
  u32 Temp = 0, Temp0 = 0, Temp1 = 0, Temp2 = 0;

  // 1.开始通讯：CS低电平
  SPI_FLASH_CS_LOW();
  // 2.发送JEDEC指令，读取ID
  SPI_FLASH_SendByte(W25X_JedecDeviceID);
  // 3.读取一个字节数据-高位
  Temp0 = SPI_FLASH_SendByte(Dummy_Byte);
  // 4.读取一个字节数据-中位
  Temp1 = SPI_FLASH_SendByte(Dummy_Byte);
  // 5.读取一个字节数据-低位
  Temp2 = SPI_FLASH_SendByte(Dummy_Byte);
  // 停止通讯：CS高电平
  SPI_FLASH_CS_HIGH();
  // 6.把数据组合起来，作为函数的返回值
	Temp = (Temp0 << 16) | (Temp1 << 8) | Temp2;
  return Temp;
}

u32 SPI_FLASH_ReadDeviceID(void)
{
  u32 Temp = 0;
  // 1.开始通讯：CS低电平
  SPI_FLASH_CS_LOW();
  // 2.发送RDID指令，读取Device ID
  SPI_FLASH_SendByte(W25X_DeviceID);
  SPI_FLASH_SendByte(Dummy_Byte);
  SPI_FLASH_SendByte(Dummy_Byte);
  SPI_FLASH_SendByte(Dummy_Byte);
  // 3.读取一个字节数据
  Temp = SPI_FLASH_SendByte(Dummy_Byte);
  // 4.停止通讯：CS高电平，返回结果
  SPI_FLASH_CS_HIGH();
  return Temp;
}

u8 SPI_FLASH_SendByte(u8 byte)
{
	 SPITimeout = SPIT_FLAG_TIMEOUT; // 等待超时时间初始化

  // 等待发送缓冲区为空，TXE事件
  while(SPI_I2S_GetFlagStatus(FLASH_SPIx, SPI_I2S_FLAG_TXE) == RESET)
	{
    if((SPITimeout--) == 0) 
      return SPI_TIMEOUT_UserCallback(0);
   }
  // 写入数据寄存器，把要写入的数据写入发送缓冲区
  SPI_I2S_SendData(FLASH_SPIx, byte);
	SPITimeout = SPIT_FLAG_TIMEOUT;
  // 等待接收缓冲区非空，RXNE事件
  while(SPI_I2S_GetFlagStatus(FLASH_SPIx, SPI_I2S_FLAG_RXNE) == RESET)
  {
    if((SPITimeout--) == 0) 
      return SPI_TIMEOUT_UserCallback(1);
  }
  // 读取数据寄存器，获取接收缓冲区数据
  return SPI_I2S_ReceiveData(FLASH_SPIx);
}

u16 SPI_FLASH_SendHalfWord(u16 HalfWord)
{
	SPITimeout = SPIT_FLAG_TIMEOUT;
  // 等待发送缓冲区为空，TXE事件
  while(SPI_I2S_GetFlagStatus(FLASH_SPIx , SPI_I2S_FLAG_TXE) == RESET)
	{
    if((SPITimeout--) == 0) 
      return SPI_TIMEOUT_UserCallback(2);
  }
  // 写入数据寄存器，把要写入的数据写入发送缓冲区
  SPI_I2S_SendData(FLASH_SPIx , HalfWord);
	SPITimeout = SPIT_FLAG_TIMEOUT;
  // 等待接收缓冲区非空，RXNE事件
  while(SPI_I2S_GetFlagStatus(FLASH_SPIx , SPI_I2S_FLAG_RXNE) == RESET)
	 {
    if((SPITimeout--) == 0) 
      return SPI_TIMEOUT_UserCallback(3);
   }
  // 读取数据寄存器，获取接收缓冲区数据 
  return SPI_I2S_ReceiveData(FLASH_SPIx);
}

void SPI_FLASH_WriteEnable(void)
{
  // 1.通讯开始：CS低
  SPI_FLASH_CS_LOW();
  // 2.发送写使能命令
  SPI_FLASH_SendByte(W25X_WriteEnable);

  // 3.通讯结束：CS高
  SPI_FLASH_CS_HIGH();
}

void SPI_FLASH_WaitForWriteEnd(void)
{
  u8 FLASH_Status = 0;

  // 1.选择 FLASH: CS 低
  SPI_FLASH_CS_LOW();

  // 2.发送 读状态寄存器 命令
  SPI_FLASH_SendByte(W25X_ReadStatusReg);

  // 3.若FLASH忙碌，则等待
  do
  {
		/* 读取FLASH芯片的状态寄存器 */
    FLASH_Status = SPI_FLASH_SendByte(Dummy_Byte);	 
  }
  while((FLASH_Status & WIP_Flag) == SET);  /* 正在写入标志 */
  // 4.停止信号  FLASH: CS 高
  SPI_FLASH_CS_HIGH();
}

void SPI_Flash_PowerDown(void)   
{ 
  /* 通讯开始：CS低 */
  SPI_FLASH_CS_LOW();
  /* 发送 掉电 命令 */
  SPI_FLASH_SendByte(W25X_PowerDown);
  /*通讯结束：CS高 */
  SPI_FLASH_CS_HIGH();
}

void SPI_Flash_WAKEUP(void)   
{
  /*选择 FLASH: CS 低 */
  SPI_FLASH_CS_LOW();
  /* 发送 上电 命令 */
  SPI_FLASH_SendByte(W25X_ReleasePowerDown);
  /* 停止信号 FLASH: CS 高 */
  SPI_FLASH_CS_HIGH();
}
